maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:24: error: ')' expected but '}' found.
}
^